# infras

./: .gitignore  MIGRATION_PLAN.md  README.md  TASKS.md
kafka-local/: .gitignore  client_sasl.properties  docker-compose.yml  down.sh  fix_acl_mount.sh  list_topics.sh  list_topics_sasl.sh  reset.sh  up.sh
keycloak-local/: docker-compose.yml  down.sh  reset.sh  up.sh
minikube-local/: down.sh  up.sh
minikube-local/k8s-local/infras-cli/: .dockerignore  .gitignore  Dockerfile  USAGE.md  docker-entrypoint.sh  infras-api  infras-cli  pyproject.toml  pytest.ini  requirements.txt  setup.py
minikube-local/k8s-local/infras-cli/app/: __init__.py  config.py  main.py
minikube-local/k8s-local/infras-cli/app/api/: __init__.py
minikube-local/k8s-local/infras-cli/app/api/routes/: __init__.py  acl.py  health.py  users.py
minikube-local/k8s-local/infras-cli/app/cli/: __init__.py  __main__.py
minikube-local/k8s-local/infras-cli/app/k8s/: __init__.py  client.py  operations.py
minikube-local/k8s-local/infras-cli/app/models/: __init__.py  health.py  service.py  user.py
minikube-local/k8s-local/infras-cli/app/services/: __init__.py  base.py  factory.py  kafka_service.py  keycloak_service.py  mysql_service.py  postgres_service.py  redis_service.py  vault_service.py
minikube-local/k8s-local/infras-cli/app/utils/: crypto.py  logging.py
minikube-local/k8s-local/infras-cli/k8s/: 00-namespace.yaml  configmap.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  resourcequota.yaml  service.yaml  serviceaccount.yaml
minikube-local/k8s-local/infras-cli/scripts/: build.sh  deploy.sh
mysql-local/: docker-compose.yml  down.sh  reset.sh  up.sh
postgres-local/: docker-compose.yml  down.sh  reset.sh  up.sh
redis-local/: connect.sh  debug_acl.sh  debug_ui.sh  docker-compose-ui.yml  docker-compose.yml  down.sh  fix_acl_mount.sh  fix_hosts.sh  redis.conf  reset.sh  test_redis.sh  ui-down.sh  ui-up.sh  up.sh  users.acl
tests/: test_acl_creation.sh  verify_token_access.sh
vault-local/: docker-compose.yml  down.sh  (+3 more)
(+61 files in other folders)
